--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ CLERK_SECRET_KEY=sk_test_gK3h8TDR4f7c5eVz8fCwrn8zCp0ZhY0HhywuqtTFEq
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 
+NEXT_CLERK_WEBHOOK_SECRET="whsec_35dxCk2OwsQnI5VK6NQ1QsCmN8w/8ijk"
+
 NEXT_PUBLIC_TINY_API_KEY="48h6c1ct2wqu1z3s941mi73ivwua4at6jgltug6h4l2uqe0x"
 
 MONGODB_URL="mongodb+srv://karimrupo21:rupo1234@cluster1.vp2kugo.mongodb.net/DevOverflow?retryWrites=true&w=majority"
