--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@clerk/nextjs": "^5.0.8",
     "@hookform/resolvers": "^3.4.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tinymce/tinymce-react": "^5.0.1",
     "@ts-morph/common": "^0.23.0",
     "class-variance-authority": "^0.7.0",
@@ -25,6 +28,7 @@
     "mongoose": "^8.1.3",
     "next": "14.2.3",
     "prismjs": "^1.29.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
